--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Formulario de Diagnóstico</title>
+    <link rel="stylesheet" href="/static/style.css">
 </head>
 <body>
     <h1>Nuevo Diagnóstico Médico</h1>
